[Curl] Fix CookieJarCurl::getRawCookie. https://bugs.webkit.org/show_bug.cgi?id=199300

Patch by Takashi Komori <Takashi.Komori@sony.com> on 2019-07-02
Reviewed by Fujii Hironori.

Source/WebCore:

On wincairo some cookie information was not displayed in WebInspector's storage tab as
CookieJarCurl::getRawCookies was calling CookieJarDB::searchCookies with wrong arguments.
This patch fixes it.

Test: http/tests/inspector/page/get-cookies.html

* platform/network/curl/CookieJarCurl.cpp:
(WebCore::CookieJarCurl::getRawCookies const):

LayoutTests:

* http/tests/inspector/page/get-cookies-expected.txt: Added.
* http/tests/inspector/page/get-cookies.html: Added.
* http/tests/inspector/page/resources/set-cookie.php: Added.
* platform/wincairo-wk1/TestExpectations:
* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/213339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247064 268f45cc-cd09-0410-ab3c-d52691b4dbfc